# anchortree

./: .gitignore  BUILD_LOG.md  Cargo.toml  DECISIONS.md  HANDOFF.md  LICENSE-MIT  LOCK.md  README.md  RESEARCH_LOG.md  ROADMAP.md  STATE.md
.github/workflows/: ci.yml
corpus/: .gitignore  README.md  fetch-hars.sh
corpus/107/: agent_response.json  eval_result.json
corpus/108/: agent_response.json  eval_result.json
corpus/subsets/: webarena-verified-hard.json
crates/anchortree-cdp/: Cargo.toml  README.md
crates/anchortree-cdp/examples/: act_after_rerender.rs  act_on_mark.rs  act_oopif.rs  attach_oopif.rs  connect_hosted.rs  eval_task.rs  lightpanda_rebind.rs  observe_frames.rs  observe_hosted.rs  observe_oopif.rs  observe_rerender.rs  observe_wss.rs  visual_marks.rs  webarena_capture.rs  webarena_frame_replay.rs  webarena_observe.rs  webarena_replay.rs  webarena_retrieve.rs
crates/anchortree-cdp/examples/fixtures/oopif/: child.html  child_action.html  parent.html  parent_action.html
crates/anchortree-cdp/src/: actions.rs  channel.rs  corpus.rs  error.rs  eval.rs  frames.rs  fulfill.rs  fuse.rs  gateway.rs  har.rs  lib.rs  observer.rs  replay.rs  report.rs  runner.rs  visual.rs
crates/anchortree-cdp/tests/: corpus.rs  report.rs  transport_neutrality.rs
crates/anchortree-core/: Cargo.toml  README.md
crates/anchortree-core/src/: budget.rs  diff.rs  fingerprint.rs  identity.rs  lib.rs  metric.rs  observation.rs  peer.rs  role.rs  source.rs
crates/anchortree-core/tests/: identity.rs  metric.rs  peer.rs
docs/: DESIGN.md
scripts/: run-once-admin-nav.sh  run-once-eval.sh  run-once-frame.sh  run-once-gitlab.sh  run-once-m1.sh  run-once-mutate.sh  run-once-retrieve.sh  run-once-webarena.sh
scripts/fixtures/frame-site/: index.html
scripts/fixtures/m1-site/: index.html
