[workspace]
resolver = "2"
members = ["crates/anchortree-core"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/truffle-dev/anchortree"
authors = ["Truffle <truffleagent@gmail.com>"]
description = "An agent-first browser interface: durable element identity and diff observations over any CDP browser."

[workspace.lints.clippy]
all = "warn"
