[package]
name = "anchortree-cdp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CDP observation source for anchortree: drives a live browser over the Chrome DevTools Protocol and produces fused accessibility + DOM + layout observations."

[lints]
workspace = true

[dependencies]
anchortree-core = { path = "../anchortree-core", version = "0.0.1" }
chromiumoxide = "0.9"
futures = "0.3"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
