[package]
name = "anchortree-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "The browser-free durable-identity engine for anchortree: stable element ids that rebind across re-renders, plus typed diff observations."
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
